--- a/index.html
+++ b/index.html
@@ -229,25 +229,22 @@ function draw(text){
   const maxN = Math.max(...allWords.map(w=>w.length));
   if(!maxN) return;
 
-  const DPR = window.devicePixelRatio||1;
-
-  const ROW_H    = 140;
-  const RULER_H  = 14;
-  const INDEX_H  = 0;
-  const PAIR_GAP = 12;   // gap between pos/neg rows in a pair
-  const SEN_GAP  = 28;   // gap between sentence groups
-  const PAD_L    = 8;
-  const PAD_T    = 16;
-  const PAD_B    = 16;
+  const DPR     = window.devicePixelRatio||1;
+  const ROW_H   = 160;
+  const RULER_H = 16;
+  const SEN_GAP = 24;  // gap between sentence rows
+  const PAD_L   = 8;
+  const PAD_T   = 16;
+  const PAD_B   = 16;
 
   const stageEl = document.querySelector('.stage');
   const availW  = stageEl.clientWidth - PAD_L*2 - 48;
   const CELL_W  = Math.max(10, Math.floor(availW / maxN));
 
   const totalW = PAD_L*2 + maxN*CELL_W;
-  // each sentence = 2 rows (pos+neg) + ruler×2 + pair gap; between sentences = SEN_GAP
-  const pairH  = ROW_H*2 + RULER_H*2 + PAIR_GAP;
-  const totalH = PAD_T + sentences.length*pairH + (sentences.length-1)*SEN_GAP + PAD_B;
+  // one row per sentence
+  const rowH_total = ROW_H + RULER_H;
+  const totalH = PAD_T + sentences.length*rowH_total + (sentences.length-1)*SEN_GAP + PAD_B;
 
   canvas.width  = totalW * DPR;
   canvas.height = totalH * DPR;
@@ -266,23 +263,21 @@ function draw(text){
   sentences.forEach((sen, si)=>{
     const words = allWords[si];
     const N     = words.length;
-    const baseY = PAD_T + si*(pairH + SEN_GAP);
+    const rowY  = PAD_T + si*(rowH_total + SEN_GAP);
 
-    // Sentence label
+    // Sentence index label
     ctx.fillStyle='rgba(0,0,0,.22)';
     ctx.font=`7px 'IBM Plex Mono', monospace`;
     ctx.textAlign='left';
     ctx.textBaseline='middle';
-    ctx.fillText(`${si+1}`, PAD_L, baseY - 7);
+    ctx.fillText(`${si+1}`, PAD_L, rowY - 7);
 
-    const posY = baseY;
-    const negY = baseY + ROW_H + RULER_H + PAIR_GAP;
-
-    drawRow(words, N, posY, CELL_W, ROW_H, RULER_H, 0, PAD_L, totalW, ['p1','p2','p3']);
-    drawRow(words, N, negY, CELL_W, ROW_H, RULER_H, 0, PAD_L, totalW, ['n1','n2','n3']);
+    // ONE row per sentence — all 6 emotions mixed
+    drawRow(words, N, rowY, CELL_W, ROW_H, RULER_H, 0, PAD_L, totalW,
+      ['p1','p2','p3','n1','n2','n3']);
   });
 
-  // Sidebar — aggregate all sentences
+  // Sidebar
   document.getElementById('legEl').innerHTML = EMOTIONS.map(e=>{
     const c=counts[e.key]||0;
     return `<div class="leg">
