--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@ Totally broken after the last patch, avoid at all costs.</textarea>
 
 // ── EMOTION CONFIG — 6 categories, P1-P3 / N1-N3 ──────────────────
 const EMOTIONS = [
-  { key:'p1', label:'P1 · Mild Positive',    color:'#A8E6CF', weight:0.28 },
-  { key:'p2', label:'P2 · Strong Positive',  color:'#FFD93D', weight:0.52 },
-  { key:'p3', label:'P3 · Extreme Positive', color:'#FF6B6B', weight:0.85 },
-  { key:'n1', label:'N1 · Mild Negative',    color:'#C3D3E8', weight:0.30 },
-  { key:'n2', label:'N2 · Strong Negative',  color:'#4A90D9', weight:0.60 },
-  { key:'n3', label:'N3 · Extreme Negative', color:'#2C3E50', weight:0.90 },
+  { key:'p1', label:'P1 · Mild Positive',    color:'#00F5A0', weight:0.28 },
+  { key:'p2', label:'P2 · Strong Positive',  color:'#FFD000', weight:0.52 },
+  { key:'p3', label:'P3 · Extreme Positive', color:'#FF2D55', weight:0.85 },
+  { key:'n1', label:'N1 · Mild Negative',    color:'#7EB8F7', weight:0.30 },
+  { key:'n2', label:'N2 · Strong Negative',  color:'#1464F4', weight:0.60 },
+  { key:'n3', label:'N3 · Extreme Negative', color:'#0A0F2C', weight:0.90 },
 ];
 const EMO_MAP = Object.fromEntries(EMOTIONS.map(e=>[e.key,e]));
 
