--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ const EMOTIONS = [
   { key:'p3', label:'P3 · Extreme Positive', color:'#FF724F', weight:0.85 },
   { key:'n1', label:'N1 · Mild Negative',    color:'#9EF2FF', weight:0.30 },
   { key:'n2', label:'N2 · Strong Negative',  color:'#A6C9FF', weight:0.60 },
-  { key:'n3', label:'N3 · Extreme Negative', color:'#91685F', weight:0.90 },
+  { key:'n3', label:'N3 · Extreme Negative', color:'#1B2A6B', weight:0.90 },
 ];
 const EMO_MAP = Object.fromEntries(EMOTIONS.map(e=>[e.key,e]));
 
